[gd_scene load_steps=13 format=2]

[ext_resource path="res://screens/gameplay/ui/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://shaders/blur/blur_shader.tres" type="Shader" id=2]
[ext_resource path="res://fonts/resource/m5x7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://screens/gameplay/ui/menu/assets/logo.png" type="Texture" id=4]
[ext_resource path="res://screens/gameplay/ui/menu/assets/menu_button_normal.tres" type="StyleBox" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/blur_amount = 1.0

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 15.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0, 0, 1 )
skew = Vector2( 0.1, 0 )
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.27451 )
shadow_size = 2

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Blur:material:shader_param/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.556863 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Logo:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -766, -323 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Logo:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGame:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Settings:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 146 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Exit:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 292 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VersionNumber:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 687, 1000 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "transition_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Blur:material:shader_param/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.647059, 0.47451, 0 ), Color( 0.764706, 0.647059, 0.47451, 0.509804 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Logo:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.189464, 0.0883879 ),
"update": 0,
"values": [ Vector2( -2280, -185 ), Vector2( -766, -323 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGame:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Settings:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 600 ), Vector2( 0, 146 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Exit:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 600 ), Vector2( 0, 292 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VersionNumber:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 0.999976 ),
"transitions": PoolRealArray( 1, 0.1, 1 ),
"update": 0,
"values": [ Vector2( 687, 1080 ), Vector2( 687, 1080 ), Vector2( 687, 1000 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "transition_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Blur:material:shader_param/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.647059, 0.47451, 0.509804 ), Color( 0.764706, 0.647059, 0.47451, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Logo:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.249999, 0.189464 ),
"update": 0,
"values": [ Vector2( -766, -323 ), Vector2( -2280, -185 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGame:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ), Vector2( 0, 600 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Settings:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 146 ), Vector2( 0, 600 ), Vector2( 0, 600 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/Exit:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 292 ), Vector2( 0, 600 ), Vector2( 0, 600 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VersionNumber:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 0.1, 1 ),
"update": 0,
"values": [ Vector2( 687, 1000 ), Vector2( 687, 1080 ), Vector2( 687, 1080 ) ]
}

[node name="Menu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 1 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Fade" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.556863 )

[node name="Logo" type="TextureRect" parent="."]
margin_left = -766.0
margin_top = -323.0
margin_right = 1558.0
margin_bottom = 909.0
texture = ExtResource( 4 )

[node name="VersionNumber" type="Label" parent="."]
margin_left = 687.0
margin_top = 1000.0
margin_right = 1232.0
margin_bottom = 1026.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 5 )
text = "version"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 150.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 814.0
margin_top = 351.0
margin_right = 1106.0
margin_bottom = 729.0
custom_constants/separation = 100
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 378.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 292.0
margin_bottom = 378.0
custom_constants/separation = 60

[node name="StartGame" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 86.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Start"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 292.0
margin_bottom = 232.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 292.0
margin_bottom = 378.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/transition_in = SubResource( 7 )
anims/transition_out = SubResource( 8 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="on_animation_finished"]
